src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .list-item {
    @apply p-4 text-[1.2rem];
  }
  body {
    position: relative;
    background-image: linear-gradient(
      to left,
      #051937,
      #002668,
      #172f98,
      #4e2ec5,
      #8c12eb
    );
  }
}
.register {
  height: 100vh;
}
.circle-1 {
  position: absolute;
  width: 200px;
  height: 200px;
  background-image: linear-gradient(to right, #8c12eb, #ada6a6);
  border-radius: 50%;
  z-index: -10;
  top: 18%;
  left: 60%;
}

.home-card::before {
  content: "";
  width: 100%;
  height: 60px;
  position: absolute;
  top: 86%;
  left: 0.099%;
  background-image: linear-gradient(to right, #172f98, #8c12eb);
  padding-top: 3rem;
  transform: skewY(-1deg);
  -webkit-transform: skewY(-1deg);
}

@media screen and (max-width: 600px) {
  .circle-1 {
    top: 20%;
  }

  .home-card::before {
    content: "";
    width: 100% !important;
    height: 70px;
    position: absolute;
    top: 85.7%;
    left: -0.08%;
    background-image: linear-gradient(to right, #172f98, #8c12eb);
    padding-top: 3rem;
    transform: skewY(7deg);
  }
}

